--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<html>
-  <head>
-    <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Zen+Dots&display=swap"
+    rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+  <title>Kritika's blog</title>
+</head>
+<body>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  <div class="section-1">
+    <img src="/Users/kritikapareshnavani/Desktop/Dev-Academy/profile.jpg">
+    <h1>Kia ora and Namaste</h1>
     <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+  </div>
+
+  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Blog.html">
+    <div class="block1">
+      <h2>Blog</h2>
+    </div>
+  </a>
+  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Reflections.html">
+    <div class="block2">
+      <h2>Reflections</h2>
+    </div>
+  </a>
+
+  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Random%20thoughts.html">
+    <div class="block3">
+      <h2>Random<br>thoughts</h2>
+    </div>
+  </a>
+</body>
+
 </html>
