--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
+    <a href="#contact">Blog</a>
     <a href="#about">About</a>
   </div>
   <div class="section-1">
-    <img src="/Users/kritikapareshnavani/Desktop/Dev-Academy/profile.jpg">
+    <img src="/Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Images/profile.jpg">
     <h1>Kia ora and Namaste</h1>
     <p> This is the beginning of my website home page.</p>
   </div>
