--- a/Home.html
+++ b/Home.html
@@ -124,7 +124,7 @@
     <a href="#about">About</a>
   </div>
   <div class="section-1">
-    <img src="/Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Images/profile.jpg">
+    <img src="https://github.com/kritika-anita/kritika-anita.github.io/blob/main/Images/profile.jpg">
     <h1>Kia ora and Namaste</h1>
     <p> This is the beginning of my website home page.</p>
   </div>
