--- a/Home.html
+++ b/Home.html
@@ -6,117 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Zen+Dots&display=swap"
-    rel="stylesheet">
-  </head>
-  <style>
-    h1 {
-      font-family: font-family: 'Roboto Mono', monospace;
-      font-family: 'Zen Dots', cursive;
-      color: #05F2DB;
-    }
-  
-    h2 {
-      font-family: font-family: font-family: 'Roboto Mono', monospace;
-      font-family: 'Zen Dots', cursive;
-      color: #F2F2F2;
-    }
-  
-    body {
-      background-color: #038C7F;
-      text-align: center;
-    }
-  
-    p {
-      color: #05F2DB;
-      text-align: center;
-      font-size: 17px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-  
-    .topnav {
-      padding: 30px;
-      overflow: hidden;
-      width: 100%;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      overflow: hidden;
-    }
-  
-    .topnav a {
-      float: top;
-      color: #05F2DB;
-      text-align: center;
-      padding: 100px;
-      font-size: 22px;
-    }
-  
-    .topnav a:hover {
-      color: #430161;
-    }
-  
-    .topnav a.active {
-      color: #F2F2F2;
-    }
-  
-    .block1 {
-      float: left;
-      width: 300px;
-      height: 300px;
-      padding: 10px 10px 10 px 10 px;
-      display: inline-block;
-      background-color: #F25835;
-      text-align: center;
-      margin: 40px 10px 10px 60px;
-      cursor: pointer;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-  
-    .block2 {
-      float: center;
-      width: 300px;
-      height: 300px;
-      padding: 10px 10px 10 px 10 px;
-      display: inline-block;
-      background-color: #F25835;
-      text-align: center;
-      margin: 40px 10px 10px 10px;
-      cursor: pointer;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-  
-    .block3 {
-      float: right;
-      width: 300px;
-      height: 300px;
-      padding: 10px 10px 10 px 10 px;
-      display: inline-block;
-      background-color: #F25835;
-      text-align: center;
-      margin: 40px 60px 10px 10px;
-      cursor: pointer;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-  
-    .section-1 {
-      padding: 10px 10px 10px 10px;
-      margin: 10px 10px 30px 10px;
-      height: 300px;
-      overflow: hidden;
-    }
-  
-    img {
-      border-radius: 100px;
-      height: 200px;
-      width: 200px;
-      box-shadow: -6px 6px #05F2DB;
-      overflow: hidden;
-    }
-  </style>
-  
-</style>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
+
 <body>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
@@ -124,25 +16,25 @@
     <a href="#about">About</a>
   </div>
   <div class="section-1">
-    <img src="https://raw.githubusercontent.com/kritika-anita/kritika-anita.github.io/main/Images/profile.jpg">
+    <img src="./images/profile.jpg">
     <h1>Kia ora and Namaste</h1>
     <p> This is the beginning of my website home page.</p>
   </div>
 
-  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Blog.html">
+  <a href="reflection-1.html">
     <div class="block1">
-      <h2>Blog</h2>
+      <h2>Reflection 1</h2>
     </div>
   </a>
-  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Reflections.html">
+  <a href="reflection-2.html">
     <div class="block2">
-      <h2>Placeholder</h2>
+      <h2>Reflection 2</h2>
     </div>
   </a>
 
-  <a href="file:///Users/kritikapareshnavani/Desktop/Dev-Academy/kritika-anita.github.io/Random%20thoughts.html">
+  <a href="reflection-3.html">
     <div class="block3">
-      <h2>Placeholder</h2>
+      <h2>Reflection 3</h2>
     </div>
   </a>
 </body>
