--- a/reflection-1.html
+++ b/reflection-1.html
@@ -83,36 +83,32 @@ img {
       <h1>Hello! It's my Blog! whatttt!</h1> 
     </div>
     <div class="text-box">
-     <p> # My Reflections - Sprint Two
+     <h2><u>My Reflections // Sprint One</u></h2>
 <br>
-### Can you describe the steps you did in this exercise in simple terms?
+<p>
+  <u>Can you describe the steps you did in this exercise in simple terms?</u>
 <br><br>
 I used the terminal to:
 1. Create css and html files
 2. Linked the two through VSCode
 3. Commit and pushed them onto my repo
 <br><br>
-### How are you finding working with the timeboxes?
+<u>- How are you finding working with the timeboxes?</u>
 
 <br>
 Really useful. I don't about spending too much time on something because I can cross check with Timebox.
 
 <br><br>
-# Learn HTML and CSS 
+<u>- What obstacles did you come up against? How did you overcome them?</u>
+  <br>
+Linking the css and html, and I'm still figuring out how to make sure my profile picture shows for every user with the link. 
 <br><br>
-### What obstacles did you come up against? How did you overcome them?
-<br>
-None in this challenge. It seemed easy.
-<br><br>
-### What are of you proud of from this challenge?
+<u>- What are of you proud of from this challenge?</u>
 <br>
 I am proud of finally gaining knowledge to create blogs and websites. So empowering!
 
 <br><br>
-
-# Add HTML and CSS to your Blog Challenge
-<br><br>
-### Write a small story about HTML and CSS and their relationship. You could personify elements or speak from your own personal experience. The story should capture insight about the nature of HTML and CSS.  
+<u>- Write a small story about HTML and CSS and their relationship. You could personify elements or speak from your own personal experience. The story should capture insight about the nature of HTML and CSS:</u>
 <br>
 Let's imagine living in a boarding school where all the kids live in a dormetry. They all are assigned one cupboard, desk, chair and a bed, which are fixed in each dorm. They get to decide the number of pillows they want, the color of their sheets, the stickers on their cupboard. 
 
@@ -120,11 +116,11 @@ HTML containts the structure of the page. It is kind of like the kids being assi
 
 CSS contains the style of the page. It allows them to choose their sheets colors, pillow covers, etc. They get to design the space assigned. 
 <br><br>
-### Any moments of surprise or joy? 
+<u>- Any moments of surprise or joy?</u> 
 <br>
 All the pieces coming together is exciting. I have seen so much of html and css around and now it is starting to make sense!
 <br><br>
-### If HTML and CSS were animals, which animals do you think they would be? Why?
+<u>- If HTML and CSS were animals, which animals do you think they would be? Why?</u>
 <br>
 Oh my god! I was imagining CSS as relationship roles. If they were animals, they would be..
 HTML would be bees! Thousands of them live in a nest and collect food. They have a structure and are obviously very organised which is like HTML's behavior too. Even beavers are a great example!
