--- a/Home.html
+++ b/Home.html
@@ -8,35 +8,74 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
+  <title>kritika home</title>
 
 <body>
-  <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Blog</a>
-    <a href="#about">About</a>
+
+  <div class="navbar">
+    <a href="home.html">Home</a>
+    <a href="about.html">About</a>
+    <div class="dropdown">
+      <button class="dropbtn">Blog +</i>
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="reflection-1.html">Sprint // 1</a>
+        <a href="reflection-2.html">Sprint // 2</a>
+        <a href="reflection-3.html">Sprint // 3</a>
+        <a href="reflection-4.html">Sprint // 4</a>
+        <a href="reflection-5.html">Sprint // 5</a>
+      </div>
+    </div>
   </div>
+  <br> <br> <br>
   <div class="section-1">
     <img src="./images/profile.jpg">
     <h1>Kia ora and Namaste</h1>
     <p> This is the beginning of my website home page.</p>
+    <br><br>
   </div>
 
-  <a href="reflection-1.html">
-    <div class="block1">
-      <h2>Reflection 1</h2>
-    </div>
-  </a>
-  <a href="reflection-2.html">
-    <div class="block2">
-      <h2>Reflection 2</h2>
-    </div>
-  </a>
+  <div class="container">
+    <a href="reflection-1.html">
+      <div class="block1">
+        <h2>Reflection 1</h2>
 
-  <a href="reflection-3.html">
-    <div class="block3">
-      <h2>Reflection 3</h2>
-    </div>
+      </div>
+    </a>
+
+    <a href="reflection-2.html">
+      <div class="block2">
+        <h2>Reflection 2</h2>
+      </div>
+    </a>
+
+    <a href="reflection-3.html">
+      <div class="block3">
+        <h2>Reflection 3</h2>
+      </div>
+    </a>
+
+  </div>
+  <br> <br> <br> <br> <br> <br>
+
+  <div class="container">
+
+    <a href="reflection-4.html">
+      <div class="block4">
+        <h2>Reflection 4</h2>
+      </div>
+    </a>
+
+    <a href="reflection-5.html">
+      <div class="block5">
+        <h2>Reflection 5</h2>
+      </div>
+    
+  </div>
   </a>
+  </div>
+
 </body>
 
 </html>
