--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <title>reflection-3</title>
+  <title>kritika about</title>
 
 <body>
 
   <div class="navbar">
     <a href="home.html">Home</a>
-    <a href="about.html">About</a>
+    <a href="#blog">About</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -27,29 +27,27 @@
         <a href="reflection-5.html">Sprint // 5</a>
       </div>
     </div>
-      <div class="dropdown-content">
-        <a href="reflection-1.html">Sprint // 1</a>
-        <a href="reflection-2.html">Sprint // 2</a>
-        <a href="reflection-3.html">Sprint // 3</a>
-        <a href="reflection-4.html">Sprint // 4</a>
-        <a href="reflection-5.html">Sprint // 5</a>
-      </div>
-      </div>
-  <br> <br> <br>
-<div class="section-1">
-  <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
-    <h1>This blog thing is fun. kinda</h1>
   </div>
-  
-  <div class="text-box">
-    <h2><u>My Reflections // Sprint Three</u></h2>
-    <br>
-    
-    
-  <div class="container2">
-    <p>
-      be back on sunday
-    </p>
+  <br> <br> <br>
+  <div class="section-1">
+    <img src="./images/profile.jpg">
+    <h1>Helloooo<br>I'm Kritika :)</h1><br>
+    <h3> This is the beginning of my website home page.</h3>
+    <br><br>
+  </div>
+
+  <div class="container">
+    <h3>
+      Welcome to my pixel retro website vibe. That's the zone I'm in right now.
+      <br><br>
+      About me:<br>
+    I value kindness, empathy, empowering and lovey-dovey friendships! I value moments when people are being themselves and I get to witness it. I’ve connected with so many people at EDA and I love how respectful and uplifting everyone is. It really makes you believe you can do anything! And you can! I live for that stuff!
+      <br><br>
+      I’m a Graphic Designer and I really enjoy Visual Art and Design- I love everything creative. 
+      <br><br><br>
+      ------
+    </h3>
+      </div>
 
 </body>
 
