--- a/reflection-1.html
+++ b/reflection-1.html
@@ -1,134 +1,202 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
-  </head>
-    <style>
-      h1 {
-        font-family: font-family: 'Roboto Mono', monospace;
-font-family: 'Zen Dots', cursive;
-        color: #05F2DB;
-      }
-      h2 {
-        font-family: font-family: font-family: 'Roboto Mono', monospace;
-font-family: 'Zen Dots', cursive;
-        color: #F2F2F2;
-      }
-      body {
-        background-color: #038C7F;
-        text-align: center;
-      }
-      p {
-      color: #F2F2F2;
-      text-align: left;
-      font-size: 17px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-    }
-    .text-box {
-      margin: auto;
-  width: 60%;
-  padding: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #F2F2F2;
-    }
-    .topnav {
-  padding: 30px;
-  overflow: hidden;
-  width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  overflow: hidden;
-}
-.topnav a {
-  float: top;
-  color: #05F2DB;
-  text-align: center;
-  padding: 100px;
-  font-size: 22px;
-}
-.topnav a:hover {
-  color: #430161;
-}
-.topnav a.active {
-  color: #F2F2F2;
-}
+<html lang="en">
 
-.section-1 {
-  padding: 10px 10px 10px 10px;
-  margin: 10px 10px 30px 10px;
-  height: 300px;
-  overflow: hidden;
-}
-img {
-  border-radius: 100px;
-  height: 200px;
-  width: 200px;
-  box-shadow: -6px 6px #05F2DB;
-  overflow: hidden;
-  background-color: yellow;
-}
-    </style>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>reflection-1</title>
+
+<body>
+
+  <div class="navbar">
+    <a href="home.html">Home</a>
+    <a href="about.html">About</a>
+    <div class="dropdown">
+      <button class="dropbtn">Blog +</i>
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="reflection-1.html">Sprint // 1</a>
+        <a href="reflection-2.html">Sprint // 2</a>
+        <a href="reflection-3.html">Sprint // 3</a>
+        <a href="reflection-4.html">Sprint // 4</a>
+        <a href="reflection-5.html">Sprint // 5</a>
+      </div>
     </div>
-    <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
-
-    <title>Kritika's blog</title>
-  <body>
-    <div class="section-1">
-      <img src="/Users/kritikapareshnavani/Desktop/Dev-Academy/human-eye-with-binary-code-computer-artwork-ERPT08">
-      <h1>Hello! It's my Blog! whatttt!</h1> 
+    <div class="dropdown-content">
+      <a href="reflection-1.html">Sprint // 1</a>
+      <a href="reflection-2.html">Sprint // 2</a>
+      <a href="reflection-3.html">Sprint // 3</a>
+      <a href="reflection-4.html">Sprint // 4</a>
+      <a href="reflection-5.html">Sprint // 5</a>
     </div>
-    <div class="text-box">
-     <h2><u>My Reflections // Sprint One</u></h2>
-<br>
-<p>
-  <u>Can you describe the steps you did in this exercise in simple terms?</u>
-<br><br>
-I used the terminal to:
-1. Create css and html files
-2. Linked the two through VSCode
-3. Commit and pushed them onto my repo
-<br><br>
-<u>- How are you finding working with the timeboxes?</u>
+  </div>
+  <br> <br> <br>
+  <div class="section-1">
+    <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
+    <h1>Hello! It's my Blog! whatttt!</h1>
+  </div>
 
-<br>
-Really useful. I don't about spending too much time on something because I can cross check with Timebox.
+  <div class="text-box">
+    <h2><u>My Reflections // Sprint One</u></h2>
+    <br>
 
-<br><br>
-<u>- What obstacles did you come up against? How did you overcome them?</u>
-  <br>
-Linking the css and html, and I'm still figuring out how to make sure my profile picture shows for every user with the link. 
-<br><br>
-<u>- What are of you proud of from this challenge?</u>
-<br>
-I am proud of finally gaining knowledge to create blogs and websites. So empowering!
 
-<br><br>
-<u>- Write a small story about HTML and CSS and their relationship. You could personify elements or speak from your own personal experience. The story should capture insight about the nature of HTML and CSS:</u>
-<br>
-Let's imagine living in a boarding school where all the kids live in a dormetry. They all are assigned one cupboard, desk, chair and a bed, which are fixed in each dorm. They get to decide the number of pillows they want, the color of their sheets, the stickers on their cupboard. 
+    <div class="container2">
+      <p>
 
-HTML containts the structure of the page. It is kind of like the kids being assigned a set of dormetry stuff that they use during their stay.
 
-CSS contains the style of the page. It allows them to choose their sheets colors, pillow covers, etc. They get to design the space assigned. 
-<br><br>
-<u>- Any moments of surprise or joy?</u> 
+        <u>In a couple of sentences, how would you describe the command line in plain English? Can you think of an analogy
+        for it?</u>
+        <br>
+        - Command line is a system that helps, or 'commands' through text. It helps navigate through folders, creating
+        new ones, removing old ones, etc as we may do on finder (for Mac) but in a visual form, whereas Command line
+        does that through text. So, if I were to create a new folder on Mac, I would right click create new folder, then
+        name it. However in Command Line I would use a bunch of text commands to do the same. For instance, to create a
+        new folder or directory, I would type: 'mkdir another_directory' and press the return key and boom! The folder
+        will appear on the system in the same way as it would if we did it visually!
+        An analogy that comes to mind to explain it is, lets say, I- Kritika, like to handwrite my notes on the iPhone
+        app, which then converts them to text. It's more visual, and easier for me to do. I could type it in as well,
+        which is an option I like to have sometimes. Now, think of hand-writing notes on the iPhone as creating a folder
+        on Mac visually, and, think of the think of the option of typing the text as the Terminal on Mac. Both are ways
+        one can create notes.
+        <br><br>
+        <u>Did you stick to the timebox guidelines? If not, what change would you make next time?</u>
+        <br>
+        - I learnt that I am able to keep up with Timebox, but knowing that I started 1 week late, I am aware that I
+        need to buck up so I am on track with week 2! I like going at this pace, cause I am absorbing all of it and
+        taking notes so I don't forget it all tomorrow, however, any help through this is appreciated!
+        <br><br>
+        <u>Name 5 commands you used, and what they do</u>
+        <br>
+        - Here are 5 commands, one may press return to see their result:<br>
+        1. Ls aka list
+        This lists everything in the folder you are at. You can do this to which folder you are at and what is inside
+        the folder.
+        <br>
+        2. cd aka change directory
+        This is used to change the working directory
+        <br>
+        3. cd ..
+        This is used to jump out of a directory.
+        <br>
+        4. git add -A
+        This is used for the first step- Staging for making changes in the online repository.
+        <br>
+        5. git clone [paste link here]
+        This is used to make or 'clone' an existing git repository.
+        <br><br>
+        <u>What's the difference between git and GitHub?</u>
+        <br>
+        - Git is a version control system that helps to track files so you don’t override/ clash changes while working
+        with multiple teammates. If we do override the changes, we get notified to merge, etc in an efficient manner.
+        When working in a team, Git is installed in each of our local machines. Now, this is where Git Hub can come into
+        the picture. Git Hub is the cloud where you can sync these files from our local machines with your teammates,
+        it’s a central source/ server/ service.
+        <br><br>
+        <u>Can you think of an analogy to describe them?</u>
+        <br>
+        - An analogy to describe them is: Let’s say, me and my Graphic Designer friend are collaborating on a brief. We
+        like to work from home and at our own time. We are in the final draft of their project and each have multiple
+        versions of ‘’project’, prject-final’, ‘finalllll I swear this time’ and this is where Git comes in. Git helps
+        track these files so I know the changes my friend is making based on our feedback and I am alerted if I am
+        overriding their changes. So this, is Git. Git hub, is separate, it’s like behind the scenes/ cloud server. We
+        can sync our files onto this cloud system. Git is local, whereas, Git Hub is online.
+        <br><br>
+        <u>What did you notice about your own learning? What did you do when you were confused or blocked?</u>
+        <br>
+        - I googled the question and trusted that I was headed in the right direction. I also took a break and asked for
+        help.
+        <br><br>
+        <u>Is there anything you'd do differently if you were to repeat the learning exploration again?</u>
+        <br>
+        - I followed the Udacity workflow and configured Git first. Then, I came back to the EDA handbook to see
+        -Important notes- in the next para. It suggested Mac users to follow the steps on the handbook. I had spent a
+        while on the Udacity config. so by the time I saw this I became confused if taking the Udacity route was the
+        same? The next time I was read the entire section instead of proceeding after each step.
+        <br><br>
+        <u>What is main?</u>
+        <br>
+        The main is the code that runs smoothly and it's the ideal version of the code.
+        <br><br>
+        <u>Why create a Branch?</u>
+        <br>
+        Branches are important when let's say, teammates, want to make changes. They can create a branch and make
+        changes and not have it affect the main. Once approved and tested, it can be merged, but until then, when it's
+        work in progress, branch is the place to make the tweaks!
+        <br><br>
+        <u>How would you describe stage and commit to your non-tech-savvy friend?</u>
+        <br>
+        An analogy I would use to describe Stage and commit to my non-tech-savvy friend is that of a relay race. I would
+        explain from the Working state.Think of the time when you may have participated/ watched a relay race. Imagine
+        yourself being in one of the teams. The race is about to begin, and you are 2nd in line. Great, now hit pause to
+        that scenario. The person in front of you, is preparing his position and making changes to his posture to be
+        best prepared to run when the whistle goes off. This friend, the first person is like a working state. A working
+        state is that in which changes have been made, but no committing has been done, I.e you have not started running
+        yet. Now, the whistle goes off. Your friend runs and you are next in line to go. You are all set and ready and
+        it is your chance next. You are in a Staged state. Here, you have been marked, it is known, that you will
+        running next in the relay, and in this scenario, ‘the next commit snapshot’.
+        Once you reach the person you have to give the baton to, you have done your part. Your speed time is marked and
+        your part of the race is complete. This state is called the Committed state. Here, the baton is safely delivered
+        to the next team player, the ‘data is safely stored in the local database’.
+        <br><br>
+        <u>What are some examples of when you would fork?</u>
+        <br>
+        An example of when you would fork a version of repo is when you want to freely experiment on the project without
+        having them show on the main version. It will be on your machine and is independent of needing other teammates
+        to 'push' one repo.
+        <br><br>
+        <u>Did you have any moments where it all clicked? What clicked?</u>
+        <br>
+        When I cloned while watching the first workshop video, I was mostly just following Joesph's steps. When I clones
+        on the stage, it all came back and the pieces started to come together. Git and Git Hub, why we use them,
+        watching the videos made sense because this is exactly what I just witnessed in my job, the staging, the
+        committing, the pushing, loo of it! The only difference is, I understand it now.
+        <u>Reflect on this activity. When did you feel frustrated?</u>
+        <br>
+        I was hesitant to begin because the video was 12 mins long and I had consumed so many videos from Install and
+        explore git to Setup Repo and create blog, all today! Once I began, I was in a state of flow. This was probably
+        the easiest exercise.
+        <br><br>
+        <u>If you didn't already know that this is the way websites are made; was it what you pictured? How does the
+        reality of this process differ from your preconceptions?</u>
 <br>
-All the pieces coming together is exciting. I have seen so much of html and css around and now it is starting to make sense!
-<br><br>
-<u>- If HTML and CSS were animals, which animals do you think they would be? Why?</u>
-<br>
-Oh my god! I was imagining CSS as relationship roles. If they were animals, they would be..
-HTML would be bees! Thousands of them live in a nest and collect food. They have a structure and are obviously very organised which is like HTML's behavior too. Even beavers are a great example!
-CSS would be male Bowerbirds. They create and design fancy homes to attract females for mating. They are called artists of nature which is similar to CSS, as CSS contains the style of the page.
+        I knew this is how changes in the website were made. It didn't occus to me that this is also how the skeleton of
+        a website looks at the beginning. Amazing!
 
-</p>
+        <br><br>
+        <u>What is your process so far for solving problems?</u>
+        <br>
+        1. I start with the toggl timer<br>
+        2. I read and consume all the info<br>
+        3. Try to solve it by following instructions<br>
+        4. If I get stuck, I google it/ reddit it/ read articles/ youtube. All depends on what data consumption mood I'm
+        in<br>
+        5. I reach out to someone for help if google doesn't help<br>
+        6. If they don't reply I take a quick break, press pause on toggl<br>
+        7. I come back with a fresh calm mind and I'm able to see it in a different light and progress, or, I receive
+        help by thenv
+        8. I summarise what I have learnt by repeating it<br>
+        9. Sometimes i move onto the next step before summarising it and then come back to it when I need to figure it
+        out again and then it's practise<br>
+        <br><br>
+        <u>What was it like trying to summarise yourself to a group of strangers?</u>
+        <br>
+        It was awesome. I hesitated before sharing the vulnerable stuff but then decided that when I read other people's
+        stories, it really helped me connect with them! So decided to go for it!
+        <br><br>
+        <u>Could you feel your ego? Were you self conscious?</u>
+        <br>
+        Only for a brief moment. I have been working at Sprint 1 for so long and have done such challenging tasks that
+        this felt so easy!
+        <br><br>
+      </p>
     </div>
-      
-    </a>
-  </body>
+
+</body>
+
 </html>
