--- a/reflection-5.html
+++ b/reflection-5.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <title>reflection-3</title>
+  <title>reflection-5</title>
 
 <body>
 
@@ -38,19 +38,19 @@
   <br> <br> <br>
 <div class="section-1">
   <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
-    <h1>This blog thing is fun. kinda</h1>
+    <h1>Hello! It's my Blog! whatttt!</h1>
   </div>
   
   <div class="text-box">
-    <h2><u>My Reflections // Sprint Three</u></h2>
+    <h2><u>My Reflections // Sprint Five</u></h2>
     <br>
     
     
   <div class="container2">
     <p>
-      be back on sunday
-    </p>
-
+      I'm almost here...:)
+      <br><br>
+</p>
 </body>
 
 </html>
