--- a/Home.html
+++ b/Home.html
@@ -61,16 +61,11 @@
 
   <div class="container">
 
-    <a href="reflection-4.html">
-      <div class="block4">
-        <h2>Reflection 4</h2>
+    <a href="margin-border-padding.html">
+      <div class="block1">
+        <h2>Margin, Border & Padding</h2>
       </div>
     </a>
-
-    <a href="reflection-5.html">
-      <div class="block5">
-        <h2>Reflection 5</h2>
-      </div>
     
   </div>
   </a>
