--- a/reflection-4.html
+++ b/reflection-4.html
@@ -13,8 +13,8 @@
 <body>
 
   <div class="navbar">
-    <a href="home.html">Home</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
+    <a href="identity-values.html">Identity Values</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
