--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
   <div class="navbar">
     <a href="home.html">Home</a>
     <a href="#blog">About</a>
+    <a href="identity-values.html">Identity Values</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
