--- a/identity-values.html
+++ b/identity-values.html
@@ -69,7 +69,7 @@ However, I get restless with a lot of reading. I've come to understand that I do
 - I plan to get a good nights sleep so I am well rested to focus better. I will be kind and understanding towards myself and everyone around me. My timebox and me will be best friends. Pomodoro too.
         <br><br><br>
       <u> A commitment as to how and where you will seek help in a timely way</u><br><br><br>
-     - For work help, I will google it, reach out to the facilitators or the people around me. Emotionally, I will call a loved one/ walk/ get yummy food. 
+     - For work help, I'll google it, reach out to the facilitators or the people around me. Emotionally, I will call a loved one/ walk/ get yummy food. 
 
       <br><br><br>
       <u> A description of what you expect from the facilitation team</u>
