--- a/home.html
+++ b/home.html
@@ -67,6 +67,16 @@
         <h2>Margin, Border & Padding</h2>
       </div>
     </a>
+    <a href="javascript-dom.html">
+      <div class="block2">
+        <h2>Sprint 3 - Technical Blog</h2>
+      </div>
+    </a>
+    <a href="#">
+      <div class="block3">
+        <h2>empty, for now</h2>
+      </div>
+    </a>
     
   </div>
   </a>
