--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
     </a>
     <a href="javascript-dom.html">
       <div class="block2">
-        <h2>Technical Blog // JS Fundamentals</h2>
+        <h2>Technical Blog - JS Fundamentals</h2>
       </div>
     </a>
     <a href="#">
