--- a/reflection-4.html
+++ b/reflection-4.html
@@ -13,6 +13,7 @@
 <body>
 
   <div class="navbar">
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="identity-values.html">Identity Values</a>
     <div class="dropdown">
