--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="navbar">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="#blog">About</a>
     <a href="identity-values.html">Identity Values</a>
     <div class="dropdown">
