--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="reflection-3.html">Sprint // 3</a>
         <a href="reflection-4.html">Sprint // 4</a>
         <a href="reflection-5.html">Sprint // 5</a>
+        <a href="reflection-foundations.html">Sprint // Foundations</a>
       </div>
     </div>
   </div>
