--- a/reflection-1.html
+++ b/reflection-1.html
@@ -26,14 +26,8 @@
         <a href="reflection-3.html">Sprint // 3</a>
         <a href="reflection-4.html">Sprint // 4</a>
         <a href="reflection-5.html">Sprint // 5</a>
+        <a href="reflection-foundations.html">Sprint // Foundations</a>
       </div>
-    </div>
-    <div class="dropdown-content">
-      <a href="reflection-1.html">Sprint // 1</a>
-      <a href="reflection-2.html">Sprint // 2</a>
-      <a href="reflection-3.html">Sprint // 3</a>
-      <a href="reflection-4.html">Sprint // 4</a>
-      <a href="reflection-5.html">Sprint // 5</a>
     </div>
   </div>
   <br> <br> <br>
