--- a/problem-solving.html
+++ b/problem-solving.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <title>reflection-1</title>
+  <title>Technical Blog - JS Fundamentals3</title>
 
 <body>
 
@@ -28,18 +28,18 @@
         <a href="reflection-5.html">Sprint // 5</a>
         <a href="reflection-foundations.html">Sprint // Foundations</a>
       </div>
-    </div>
-  </div>
+      </div>
   <br> <br> <br>
-  <div class="section-1">
-    <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
+<div class="section-1">
+  <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
     <h1>As if talking to a Non-technical friend, discuss:</h1>
   </div>
-
+  
   <div class="text-box">
     <h2><u>//</u></h2>
     <br>
-
+    
+    
   <div class="container2">
     <p>
         <u>An analogy to describe the differences between HTML and CSS:</u>
