--- a/identity-values.html
+++ b/identity-values.html
@@ -49,7 +49,8 @@
         <br>
         - Working with organisations that care and give back.
         <br>
-        - Coding to be independant + enchance my skills of: UI/UX- Making Websites, Apps, Graphic Design, AR, Visual Art, all things creative. Also want to make websites and digitise the mutiple business ideas I have! Let's go!
+        - Coding to be independant + enchance my skills of: UI/UX- Making Websites, Apps, Graphic Design, AR, Visual
+        Art, all things creative. Also want to make websites and digitise the mutiple business ideas I have! Let's go!
         <br><br><br>
         <u> A description of your own strengths and limitations in relation to learning</u>
         <br><br><br>
