--- a/javascript-dom.html
+++ b/javascript-dom.html
@@ -40,58 +40,71 @@
     <h2><u>//</u></h2>
     <br>
 
-  <div class="container2">
-    <p>
+    <div class="container2">
+      <p>
         <u>An analogy to describe the differences between HTML and CSS:</u>
         <br><br>
         - Let's imagine living in a boarding school where all the kids live in a dormetry. They all are assigned one
-        cupboard, desk, chair and a bed, which are fixed in each dorm. They get to decide the number of pillows they want,
+        cupboard, desk, chair and a bed, which are fixed in each dorm. They get to decide the number of pillows they
+        want,
         the color of their sheets, the stickers on their cupboard.
         <br>
-        So, HTML containts the structure of the page. The kids get a set of dormetry stuff that they are assigned during their stay.
-        And, CSS contains the style of the page. It allows them to choose their sheets colors, pillow covers, etc. They get to
-        design the space assigned.
-
+        So, HTML containts the structure of the page. The kids get a set of dormetry stuff that they are assigned during
+        their stay.
+        And, CSS contains the style of the page. It allows them to choose their sheets colors, pillow covers, etc. They
+        get to design the space assigned.
         <br><br>
-        <u>Explain control flow and loops using an example process from everyday life, for example 'waking up' or 'brushing your teeth'. (But not those ones).</u>
+        <u>Explain control flow and loops using an example process from everyday life, for example 'waking up' or
+          'brushing your teeth'. (But not those ones).</u>
         <br><br>
-        - Control flow is like the order in which the instructions in your program are executed. A loop is something that will continue to repeat until a certain condition is met/ condition becomes true.<br>
-        Here's an example: Humans in society live a monotonous and pointless life with a calculated minimum amount weekend bliss and blindly follow the 9-5 we are told to, to live a "comfortable" life aka life with no joy :D alot of restriction and rigid structures, and that society, my dear friend reading this, is control flow. Juusssttt kiddin. Lol that got so dark haha. 
+        - Control flow is like the order in which the instructions in your program are executed. A loop is something
+        that will continue to repeat until a certain condition is met/ condition becomes true.<br>
+        Here's an example: Humans in society live a monotonous and pointless life with a calculated minimum amount
+        weekend bliss and blindly follow the 9-5 we are told to, to live a "comfortable" life aka life with no joy :D
+        alot of restriction and rigid structures, and that society, my dear friend reading this, is control flow.
+        Juusssttt kiddin. Lol that got so dark haha.
         <br><br>
-        Here is an actual example: On a workday, you wake up, walk to your bus stop, wait for the bus, get inside, tag off, walk to your office and you do this every work day. This is control flow. Now, let's say you walk to the bus top one day, but forgot that your hop card has low balance, uh oh, you're going to be late now! This is where loop comes in. It takes into account all the stuff that could go wrong in this journey, its used for executing a block of statements repeatedly until a particular condition aka trip to work is satisfied.
-
+        Here is an actual example: On a workday, you wake up, walk to your bus stop, wait for the bus, get inside, tag
+        off, walk to your office and you do this every work day. This is control flow. Now, let's say you walk to the
+        bus top one day, but forgot that your hop card has low balance, uh oh, you're going to be late now! This is
+        where loop comes in. It takes into account all the stuff that could go wrong in this journey, its used for
+        executing a block of statements repeatedly until a particular condition aka trip to work is satisfied.
         <br><br>
         <u>Describe what the DOM is and an example of how you might interact with it.</u>
         <br><br>
-        - Document Object Model aka DOM, is your document structure, all its elements (html, tags, title) and how they are all layed out. It can be used for manipulating and editing elements on the page. It kinda looks like a flow chart. We find these elements with the console.log function and make the changes required. 
+        - Document Object Model aka DOM, is your document structure, all its elements (html, tags, title) and how they
+        are all layed out. It can be used for manipulating and editing elements on the page. It kinda looks like a flow
+        chart. We find these elements with the console.log function and make the changes required.
         <br><br>
         <u>Explain the difference between accessing data from arrays and objects.</u>
         <br><br>
-        - Objects shows a special data type that is alterable/mutable and can be used to store a collection of data instead of a single value. Arrays are a special type of variable that can also be altered and be used to store a list of values. 
+        - Objects shows a special data type that is alterable/mutable and can be used to store a collection of data
+        instead of a single value. Arrays are a special type of variable that can also be altered and be used to store a
+        list of values.
         <br><br>
         When to use arrays:<br>
         Arrays store the data in an ordered collection in which the data can be accessed using a numerical index.
         <br><br>
-
         When to use objects:<br>
         Objects are used to represent a ‘Thing’. This could be anything like people, houses, cats etc.
         <br><br>
-        To summarise: If you have to store the data in order or in a sequence then use array otherwise you can use object for everything else.
+        To summarise: If you have to store the data in order or in a sequence then use array otherwise you can use
+        object for everything else.
         <br> I remember it with this keyword pairing: Array-Sequence & Object-properties.
         <br><br>
-
         <u>Explain what functions are and why they are useful.</u>
         <br><br>
-        - Functions are a set of statements (a block of code in JS) that performs a task or calculates a value. They allow you to define a block of code, give it a name and then execute it as many times as you want! Pretty cool.
+        - Functions are a set of statements (a block of code in JS) that performs a task or calculates a value. They
+        allow you to define a block of code, give it a name and then execute it as many times as you want! Pretty cool.
         You can define it using function keyword, followed by a name, followed by parentheses ().<br>
         Here is an example:<br><br>
         function myFunction(p1, p2) {<br>
-            return p1 + p2;  <br>
-          }<br>
-          // The function will return the sum of p1 and p2.<br>
-    
-      
-    </p>
+        return p1 + p2; <br>
+        }<br>
+        // The function will return the sum of p1 and p2.<br>
+
+
+      </p>
 
 </body>
 
