--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -2,52 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/style.css">
-  <title>reflection-1</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
+    <title>reflection-1</title>
 
 <body>
 
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
-    <div class="dropdown">
-      <button class="dropbtn">Blog +</i>
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="reflection-1.html">Sprint // 1</a>
-        <a href="reflection-2.html">Sprint // 2</a>
-        <a href="reflection-3.html">Sprint // 3</a>
-        <a href="reflection-4.html">Sprint // 4</a>
-        <a href="reflection-5.html">Sprint // 5</a>
-        <a href="reflection-foundations.html">Sprint // Foundations</a>
-      </div>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="identity-values.html">Identity Values</a>
+        <div class="dropdown">
+            <button class="dropbtn">Blog +</i>
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="reflection-1.html">Sprint // 1</a>
+                <a href="reflection-2.html">Sprint // 2</a>
+                <a href="reflection-3.html">Sprint // 3</a>
+                <a href="reflection-4.html">Sprint // 4</a>
+                <a href="reflection-5.html">Sprint // 5</a>
+                <a href="reflection-foundations.html">Sprint // Foundations</a>
+            </div>
+        </div>
     </div>
-  </div>
-  <br> <br> <br>
-  <div class="section-1">
-    <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
-    <h1>Your understanding of Emotional Intelligence</h1>
-  </div>
+    <br> <br> <br>
+    <div class="section-1">
+        <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
+        <h1>Understanding of Emotional Intelligence</h1>
+    </div>
 
-  <div class="text-box">
-    <h2><u>//</u></h2>
-    <br>
-    
-  <div class="container2">
-    <p>
-      <h1>Describe the difference between EQ and IQ</h1>
-      <h1>Describe why EQ is important and how it is relevant to you</h1>
-      <h1>Engage and practice Attention Training (mindfulness)</h1>
-      <h1>Engage and practice Conscious Listening</h1>
- 
-    </p>
+    <div class="text-box">
+        <h2><u>//</u></h2>
+        <br>
+
+        <div class="container2">
+            <p>
+            <h1>Describe the difference between EQ and IQ</h1>
+            <h1>Describe why EQ is important and how it is relevant to you</h1>
+            <h1>Engage and practice Attention Training (mindfulness)</h1>
+            <h1>Engage and practice Conscious Listening</h1>
+
+            </p>
 
 </body>
 
