--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -42,14 +42,15 @@
 
         <div class="container2">
             <p>
-            <h1>Describe the difference between EQ and IQ</h1>
+            ### Describe the difference between EQ and IQ</h1>
+            <br><br>
             Intelligence quotient, is a measure of different qualities we tend to think of as comprising our intelligence. 
             Such as promblem solving skills and analytical thinking, short term memory, etc. IQ, on the other 
             hand doesn't measure how intelligent you are or your knowledge or how educated you are. It's a measure of 
             a person's ability to relate to others, understand their own emotions and motivations as well as others. 
             A persons social skills, empathy, self awareness and ability to manage relationships. 
-            
-            <h1>Describe why EQ is important and how it is relevant to you</h1>
+            <br><br>
+            ### Describe why EQ is important and how it is relevant to you</h1>
             EQ is important as it helps know how to communicate more effectively with other people. I am able to relate to people on a deeper 
             level, and can understand their motivations and feelings and can take those into account when dealing with them.
             In the work place, it makes for better negotiators, managers and leaders. Not only does it play a big role in a person's success, 
